2008-04-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodebinding.vala, gobject/valaccodeclassbinding.vala,
	  gobject/valaccodemethodbinding.vala:

	  Mark generic type parameter properties as construct-only,
	  fixes bug 528567

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: disable null warnings with
	 --disable-non-null

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix g_output_stream_write_all and
	  g_file_load_contents bindings, fixes bug 528491

	* vapi/gio-2.0.vapi: regenerated

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valainvocationexpression.vala,
	  vala/valamemberaccess.vala, gobject/Makefile.am,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodeinvocationexpressionbinding.vala,
	  gobject/valaccodememberaccessbinding.vala:

	  Add CCodeInvocationExpressionBinding and CCodeMemberAccessBinding
	  classes

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am, gobject/valaccodecreationmethodbinding.vala,
	  gobject/valaccodegenerator.vala, gobject/valaccodemethodbinding.vala,
	  vala/valacreationmethod.vala:

	  Add CCodeCreationMethodBinding and CCodeMethodBinding classes

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterface.vala, gobject/Makefile.am,
	  gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodebinding.vala, gobject/valaccodeclassbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodeinterfacebinding.vala,
	  gobject/valaccodetypesymbolbinding.vala:

	  Add CCodeTypesymbolBinding, CCodeClassBinding, and
	  CCodeInterfaceBinding classes

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala, vala/valaassignment.vala,
	  vala/valacodebinding.vala, vala/valacodecontext.vala,
	  vala/valacodenode.vala, vala/valaelementaccess.vala,
	  vala/valamethod.vala, vala/valaparser.vala,