@@ -6,8 +6,10 @@ gtk_about_dialog_set_authors.authors is_array="1" no_array_length="1"
 gtk_about_dialog_set_documenters no_array_length="1"
 gtk_about_dialog_set_documenters.documenters is_array="1" no_array_length="1"
 gtk_about_dialog_set_email_hook.data hidden="1"
+gtk_about_dialog_set_email_hook.destroy nullable="1"
 gtk_about_dialog_set_email_hook type_name="void"
 gtk_about_dialog_set_url_hook.data hidden="1"
+gtk_about_dialog_set_url_hook.destroy nullable="1"
 gtk_about_dialog_set_url_hook type_name="void"
 gtk_accelerator_parse.accelerator_key is_out="1"
 gtk_accelerator_parse.accelerator_mods is_out="1"
